feat: implement complete authentication system with logout
- Add AuthProvider context with useAuth hook for session management
- Implement login/signup screens with React Native Paper UI
- Add protected main route with logout functionality
- Fix routing issues (tabs -> main redirects)
- Add proper authentication flow with automatic redirects
- Include error handling and validation for auth forms
- Move lib/ to project root for proper imports
- Update metro.config.js for better bundling performance

--- a/app.json
+++ b/app.json
@@ -1,7 +1,13 @@
 {
   "expo": {
     "name": "NomaLang",
-    "slug": "NomaLang",
+    "slug": "NomaLang", 
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "routerRoot": "app"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
