--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~3.0.8",
     "franc": "^6.2.0",
+    "openai": "^6.6.0",
     "react": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.0",
