--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.5.0",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.5.0",
     "@supabase/supabase-js": "^2.76.1",
     "expo": "~54.0.18",
@@ -27,15 +27,14 @@
     "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~3.0.8",
     "franc": "^6.2.0",
-    "openai": "^6.6.0",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.29.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-web": "^0.21.2",
-    "react-native-worklets": "^0.6.1"
+    "react-native-worklets": "0.5.1"
   },
   "private": true
 }
